Initial GitHub Actions workflow

--- a/.github/workflows/sbom-create-and-scan.yml
+++ b/.github/workflows/sbom-create-and-scan.yml
@@ -44,6 +44,9 @@ jobs:
       - run: git checkout HEAD^2
         if: ${{ github.event_name == 'pull_request' }}
 
+      - name: Output Inputs
+        run: echo "${{ toJSON(github.event.inputs) }}"
+
       # Java is required to run the various Fortify utilities.
       # Setup JDK 11 on host
       - uses: actions/setup-java@v3
@@ -52,20 +55,20 @@ jobs:
           java-version: '11'
 
       # set the FOD app name to be used throughout the workflow
-      #- name: Set FoD app name
-      #  shell: bash
-      #  run: |
-      #    if [[ -z "$APP_NAME_OVERRIDE" ]]; then
-      #      echo "::debug::Setting FOD_APP_NAME environment variable to default: $DEFAULT_APP_NAME"
-      #      echo "FOD_APP_NAME=$(echo ${DEFAULT_APP_NAME})" >> $GITHUB_ENV
-      #    else
-      #      echo "::debug::Setting FOD_APP_NAME environment variable to override: $APP_NAME_OVERRIDE"
-      #      echo "FOD_APP_NAME=$(echo ${APP_NAME_OVERRIDE})" >> $GITHUB_ENV
-      #    fi
-      #  env:
-      #    DEFAULT_APP_NAME: ${{ env.DEFAULT_APP_NAME }}
-      #    APP_NAME_OVERRIDE: ${{ vars.FOD_APP_NAME }}
-      #  id: set_fod_app_name
+      - name: Set FoD app name
+        shell: bash
+        run: |
+          if [[ -z "$APP_NAME_OVERRIDE" ]]; then
+            echo "::debug::Setting FOD_APP_NAME environment variable to default: $DEFAULT_APP_NAME"
+            echo "FOD_APP_NAME=$(echo ${DEFAULT_APP_NAME})" >> $GITHUB_ENV
+          else
+            echo "::debug::Setting FOD_APP_NAME environment variable to override: $APP_NAME_OVERRIDE"
+            echo "FOD_APP_NAME=$(echo ${APP_NAME_OVERRIDE})" >> $GITHUB_ENV
+          fi
+        env:
+          DEFAULT_APP_NAME: ${{ env.DEFAULT_APP_NAME }}
+          APP_NAME_OVERRIDE: ${{ vars.FOD_APP_NAME }}
+        id: set_fod_app_name
 
       # Get the branch name or pr number
       #- name: Extract branch name
